--- a/hat.ipynb
+++ b/hat.ipynb
@@ -13,6 +13,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.2.0 🚀 Python-3.10.14 torch-2.2.2 CUDA:0 (NVIDIA GeForce RTX 4070 Laptop GPU, 8188MiB)\n",
+      "Setup complete ✅ (16 CPUs, 7.4 GB RAM, 115.1/1006.9 GB disk)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install ultralytics\n",
+    "import ultralytics\n",
+    "ultralytics.checks()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -62,6 +82,60 @@
     "project = rf.workspace(\"hatdetection-tzupk\").project(\"hat_detection-qq7rg\")\n",
     "version = project.version(1)\n",
     "dataset = version.download(\"yolov8-obb\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://github.com/ultralytics/assets/releases/download/v8.1.0/yolov8m.pt to 'yolov8m.pt'...\n",
+      "100%|███████████████████████████████████████| 49.7M/49.7M [02:43<00:00, 318kB/s]\n",
+      "Ultralytics YOLOv8.2.0 🚀 Python-3.10.14 torch-2.2.2 CUDA:0 (NVIDIA GeForce RTX 4070 Laptop GPU, 8188MiB)\n",
+      "\u001b[34m\u001b[1mengine/trainer: \u001b[0mtask=detect, mode=train, model=yolov8m.pt, data=Hat_Detection-1/data.yaml, epochs=20, time=None, patience=100, batch=16, imgsz=640, save=True, save_period=-1, cache=False, device=None, workers=8, project=None, name=train, exist_ok=False, pretrained=True, optimizer=auto, verbose=True, seed=0, deterministic=True, single_cls=False, rect=False, cos_lr=False, close_mosaic=10, resume=False, amp=True, fraction=1.0, profile=False, freeze=None, multi_scale=False, overlap_mask=True, mask_ratio=4, dropout=0.0, val=True, split=val, save_json=False, save_hybrid=False, conf=None, iou=0.7, max_det=300, half=False, dnn=False, plots=True, source=None, vid_stride=1, stream_buffer=False, visualize=False, augment=False, agnostic_nms=False, classes=None, retina_masks=False, embed=None, show=False, save_frames=False, save_txt=False, save_conf=False, save_crop=False, show_labels=True, show_conf=True, show_boxes=True, line_width=None, format=torchscript, keras=False, optimize=False, int8=False, dynamic=False, simplify=False, opset=None, workspace=4, nms=False, lr0=0.01, lrf=0.01, momentum=0.937, weight_decay=0.0005, warmup_epochs=3.0, warmup_momentum=0.8, warmup_bias_lr=0.1, box=7.5, cls=0.5, dfl=1.5, pose=12.0, kobj=1.0, label_smoothing=0.0, nbs=64, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, degrees=0.0, translate=0.1, scale=0.5, shear=0.0, perspective=0.0, flipud=0.0, fliplr=0.5, bgr=0.0, mosaic=1.0, mixup=0.0, copy_paste=0.0, auto_augment=randaugment, erasing=0.4, crop_fraction=1.0, cfg=None, tracker=botsort.yaml, save_dir=runs/detect/train\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/lib/python3.10/site-packages/ultralytics/engine/trainer.py\", line 514, in get_dataset\n",
+      "    data = check_det_dataset(self.args.data)\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/lib/python3.10/site-packages/ultralytics/data/utils.py\", line 329, in check_det_dataset\n",
+      "    raise FileNotFoundError(m)\n",
+      "FileNotFoundError: \n",
+      "Dataset 'Hat_Detection-1/data.yaml' images not found ⚠️, missing path '/home/rio/datasets/roboflow/Hat_Detection-1/valid/images'\n",
+      "Note dataset download directory is '/home/rio/datasets'. You can update this in '/home/rio/.config/Ultralytics/settings.yaml'\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/bin/yolo\", line 8, in <module>\n",
+      "    sys.exit(entrypoint())\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/lib/python3.10/site-packages/ultralytics/cfg/__init__.py\", line 582, in entrypoint\n",
+      "    getattr(model, mode)(**overrides)  # default args from model\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/lib/python3.10/site-packages/ultralytics/engine/model.py\", line 654, in train\n",
+      "    self.trainer = (trainer or self._smart_load(\"trainer\"))(overrides=args, _callbacks=self.callbacks)\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/lib/python3.10/site-packages/ultralytics/engine/trainer.py\", line 129, in __init__\n",
+      "    self.trainset, self.testset = self.get_dataset()\n",
+      "  File \"/home/rio/anaconda3/envs/pn310/lib/python3.10/site-packages/ultralytics/engine/trainer.py\", line 518, in get_dataset\n",
+      "    raise RuntimeError(emojis(f\"Dataset '{clean_url(self.args.data)}' error ❌ {e}\")) from e\n",
+      "RuntimeError: Dataset 'Hat_Detection-1/data.yaml' error ❌ \n",
+      "Dataset 'Hat_Detection-1/data.yaml' images not found ⚠️, missing path '/home/rio/datasets/roboflow/Hat_Detection-1/valid/images'\n",
+      "Note dataset download directory is '/home/rio/datasets'. You can update this in '/home/rio/.config/Ultralytics/settings.yaml'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!yolo task=detect mode=train model=yolov8m.pt data=Hat_Detection-1/data.yaml epochs=20 imgsz=640"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hat_Detection-1/data.yaml"
    ]
   }
  ],
